--- a/views/login.erb
+++ b/views/login.erb
@@ -12,6 +12,11 @@
     <input type="password" name="password" />
   </p>
 
+  <p>
+    <input type="checkbox" name="remember_me" value="true" checked />
+    <label for="remember_me">Keep me logged in</label>
+  </p>
+
   <input type="submit" value="Login" />
 
 </form>
