something has changed... something boring

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,7 +9,7 @@
     
     <%= styled_flash %>
 
-    <h1>Authentication Example</h1>
+    <h1><a href="/">Authentication Example</a></h1>
 
     <%= yield %>
 
